export data to excelsheet

--- a/employee-portal/src/app/dashboard/dashboard.component.html
+++ b/employee-portal/src/app/dashboard/dashboard.component.html
@@ -45,4 +45,6 @@
       Next
     </button>
   </div>
+  <button class="btn btn-primary mb-3" (click)="exportToExcel()">Export to Excel</button>
+
 </div>
