--- a/employee-portal/src/app/dashboard/dashboard.component.html
+++ b/employee-portal/src/app/dashboard/dashboard.component.html
@@ -44,7 +44,8 @@
     <button class="btn btn-primary ms-2" (click)="nextPage()">
       Next
     </button>
+
   </div>
   <button class="btn btn-primary mb-3" (click)="exportToExcel()">Export to Excel</button>
-
+  <button (click)="logout()" class="btn btn-danger">Logout</button>
 </div>
